test/visibility/only/innerModuleSharesName-topLevel.good
innerModuleSharesName-topLevel.chpl:11: error: Symbol 'whatev' undeclared in module 'M'
